<resources>
    <string name="app_name">MortgageCalculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mortgage_calculator">Mortgage Calculator</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="down_payment">Down Payment</string>
    <string name="mortgage_term">Mortgage Term</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="property_tax">Property Tax</string>
    <string name="property_insurance">Property Insurance</string>
    <string name="pmi">PMI</string>
    <string name="zip_code">Zip Code</string>
    <string name="first_payment_date">First Payment Date</string>
    <string name="dollar_symbol">$</string>
    <string name="percentage_symbol">%</string>
    <string name="years_text">years</string>
    <string name="dollars_per_year">$ per year</string>
    <string name="calculate">Calculate</string>

    <string-array name="months_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="years_array">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
    <string name="title_activity_result">ResultActivity</string>
    <string name="back">Back</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="total_payment">Total Payment</string>
    <string name="payoff_date">Payoff Date</string>


</resources>
